<resources>
    <string name="app_name">Homework #3</string>
    <string name="title">Profile Info</string>
    <string name="email">Email</string>
    <string name="user_name">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="name">name</string>
    <string name="again">Again</string>
</resources>